<resources>
    <string name="app_name">Gmail</string>
    <string name="inbox">Inbox</string>
    <string name="menu">menu</string>
    <string name="search">search</string>
    <string name="name">John Doe</string>
    <string name="timestamp">Oct 27, 2024</string>
    <string name="subject">Meeting Reminder</string>
    <string name="content">Don\'t forget about the meeting scheduled for tomorrow.</string>
    <string name="star">star</string>
    <string name="avatar">avatar</string>
</resources>