<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/default_avatar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/senderNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/name" /> <!-- Temporary data text -->

            <TextView
                android:id="@+id/timestampTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:text="@string/timestamp" /> <!-- Temporary data text -->
        </LinearLayout>

        <TextView
            android:id="@+id/subjectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject" /> <!-- Temporary data text -->

        <TextView
            android:id="@+id/contentPreviewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content" /> <!-- Temporary data text -->

    </LinearLayout>

    <ImageView
        android:id="@+id/starImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/star"
        android:src="@drawable/ic_star" />

</LinearLayout>
